--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -9,28 +14,86 @@ ul {
     padding: 0;
 }
 
+h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+h2,
+h1,
+body {
+    margin: 0;
+}
+
+.first-portion p,
+.header-links {
+    color: #E5E7EB;
+    font-size: 18px;
+
+}
+
 .header {
     display: flex;
     background-color: #1F2937;
     color: #F9FAF8;
     align-items: center;
     justify-content: space-between;
-    padding: 8px 60px;
+    padding: 8px 150px;
     margin: 0;
 }
 
 .header-links {
     display: flex;
-    font-size: 18px;
-    color: #E5E7EB;
     gap: 20px;
 }
 
-.header-logo {
+.header-logo-image {
     font-size: 24px;
+    width: 150px;
+    height: auto;
 }
 
 .first-portion {
     background-color: #1F2937;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    padding: 80px 150px;
+    gap: 100px;
+}
+
+img.first-item {
+    width: 500px;
+}
+
+.signup {
+    background-color: #3882F2;
+    color: #E5E7EB;
+    font-size: 18px;
+    padding: 5px 15px;
+    border-radius: 8px;
+    border: none;
+}
+
+.first-item.text {
+    width: 500px;
+}
+
+.second-portion {
+    text-align: center;
+}
+
+.second-portion .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.second-card-item.image {
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+    border: solid #3882F2;
+    border-radius: 20px;
 }
